lang/tests/collaboration/ui/fail/04-invalid-signers-syntax.stderr
error: around "3]@(?"(at position 16), expected one of `.`, `[`, `(?`, `END`, `)`, `&&`, `||`, `<`, `<=`, `>`, `>=`, `==` or `!=`, but found `@`
 --> $DIR/04-invalid-signers-syntax.rs:7:28
  |
7 |         #[liquid(signers = "$[..][..][1,2,3]@(?true)[..][..]")]
  |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
